# context8

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  BOTTLENECKS.md  CONCEPT.md  Hackathon Demo Video — Script.md  PLAN-01-INFRASTRUCTURE.md  PLAN-02-EMBEDDING-PIPELINE.md  PLAN-03-STORAGE-SCHEMA.md  PLAN-04-MCP-SERVER.md  PLAN-05-SEARCH-ENGINE.md  PLAN-06-AGENT-INTEGRATION.md  PLAN-07-COLD-START.md  PLAN-08-TESTING.md
src/context8/: __init__.py  __main__.py  agents.py  browse.py  cli.py  config.py  docker.py  embeddings.py  export.py  feedback.py  models.py  search.py  seed.py  server.py  storage.py
src/context8/benchmark/: __init__.py  ground_truth.py  runner.py
src/context8/cli/: main.py  ui.py
src/context8/cli/commands/: __init__.py  bench.py  ingest.py  integrations.py  lifecycle.py  ops.py  serve.py
src/context8/embeddings/: __init__.py  service.py  tokenizer.py
src/context8/hooks/: __init__.py  capture.py  suggest.py
src/context8/ingest/: __init__.py  github.py  pipeline.py  seed.py  sessions.py
src/context8/mcp/: __init__.py  server.py  tools.py  tools_browse.py
src/context8/search/: __init__.py  analyzer.py  attribution.py  engine.py  fusion.py  ranking.py
src/context8/storage/: __init__.py  actian_backend.py  backend.py  service.py  sqlite_backend.py  sqlite_schema.py
tests/: test_agents.py  test_attribution.py  test_benchmark.py  test_e2e.py  test_e2e_sqlite.py  test_embeddings.py  test_github_importer.py  test_models.py  test_models_extended.py  test_ranking.py  test_search_filter.py  test_storage_sqlite.py
