[project]
name = "context8"
version = "0.3.0"
description = "Collective problem-solving memory for coding agents — powered by Actian VectorAI DB"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Context8 Team", email = "hachiagoholdings@gmail.com"},
]
keywords = ["mcp", "vector-database", "coding-agents", "actian", "context8"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
code = [
    "transformers>=4.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]
all = [
    "context8[code,dev]",
]

# NOTE: actian-vectorai is required at runtime but is not on PyPI.
# Install it from the official hackathon repo:
#   pip install "actian-vectorai @ https://github.com/hackmamba-io/actian-vectorAI-db-beta/raw/main/actian_vectorai-0.1.0b2-py3-none-any.whl"

[project.scripts]
context8 = "context8.cli:main"

[project.urls]
Homepage = "https://github.com/hallelx2/context8"
Repository = "https://github.com/hallelx2/context8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context8"]

# uv resolves actian-vectorai from this URL when installing from source.
# This does NOT affect PyPI installs (uv.sources is ignored by pip/PyPI).
[tool.uv.sources]
actian-vectorai = { url = "https://github.com/hackmamba-io/actian-vectorAI-db-beta/raw/main/actian_vectorai-0.1.0b2-py3-none-any.whl" }

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/context8/ingest/seed.py" = ["E501"]
"src/context8/mcp/tools.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
