[project]
name = "context8"
version = "0.5.0"
description = "Collective problem-solving memory for coding agents — local SQLite + sqlite-vec by default"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Context8 Team", email = "hachiagoholdings@gmail.com"},
]
keywords = ["mcp", "vector-database", "sqlite", "sqlite-vec", "coding-agents", "context8"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.6",
    "mcp>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "ruff>=0.15.11",
]

[project.optional-dependencies]
code = [
    "transformers>=4.30.0",
]
actian = [
    # The Actian VectorAI DB SDK is a hackathon-era beta wheel hosted on
    # GitHub (not on PyPI). It's optional — install only if you want to
    # run with CONTEXT8_BACKEND=actian.
    "actian-vectorai @ https://github.com/hackmamba-io/actian-vectorAI-db-beta/raw/main/actian_vectorai-0.1.0b2-py3-none-any.whl",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]
all = [
    "context8[code,dev]",
]

[project.scripts]
context8 = "context8.cli:main"

[project.urls]
Homepage = "https://github.com/hallelx2/context8"
Repository = "https://github.com/hallelx2/context8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context8"]

[tool.hatch.metadata]
# Allow the actian-vectorai direct URL reference in `[project.optional-dependencies] actian`.
allow-direct-references = true

# uv resolves actian-vectorai from this URL when installing from source.
# This does NOT affect PyPI installs (uv.sources is ignored by pip/PyPI).
[tool.uv.sources]
actian-vectorai = { url = "https://github.com/hackmamba-io/actian-vectorAI-db-beta/raw/main/actian_vectorai-0.1.0b2-py3-none-any.whl" }

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/context8/ingest/seed.py" = ["E501"]
"src/context8/mcp/tools.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "actian: marks tests that require the Actian backend (skipped unless CONTEXT8_BACKEND=actian and the SDK + container are reachable)",
]
